--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,13 @@
+dist: trusty
+sudo: required
+
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
 language: node_js
 node_js:
   - "node"
