--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,7 @@ addons:
 language: node_js
 node_js:
   - "node"
+
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
