--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,8 @@ node_js:
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+
+script:
+  - npm lint
+  - npm test
+  - npm e2e
