--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ node_js:
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "npm install --global create-react-app"
 
 script:
-  - ng test --single-run --build --colors --progress
+  - npm run test
