--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
+    "material-ui": "^1.0.0-beta.12",
     "prettier": "^1.7.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "typeface-roboto": "^0.0.35"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
