Add bulding of the project
Introduce two stages for the application.
One will run the tests and the 2nd one will
build it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,9 @@ before_install:
   - "sh -e /etc/init.d/xvfb start"
   - "npm install --global create-react-app"
 
-script:
-  - npm run test
+jobs:
+  include:
+    - stage: test
+      script: yarn test
+    - stage: build
+      script: yarn build
