Enable deploying to gh-pages on tagging the repo
If repo is tagged enable deployment to
kornicameister.github.io/korni

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,10 @@ jobs:
       script: yarn test
     - stage: build
       script: yarn build
+
+deploy:
+  provider: script
+  script: yarn deploy
+  on:
+    tag: true
+    branch: master
