--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "src.kornicameister.github.io",
-  "homepage": "http://kornicameister.github.io/k",
+  "homepage": "http://kornicameister.github.io/korni",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
