--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
     - stage: build
       script: yarn build
     - stage: deploy
-      script: skip
+      script: yarn install
       deploy:
         - provider: releases
           api_key:
