--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "^1.7.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
     "react-scripts": "1.0.14",
     "typeface-roboto": "^0.0.35"
   },
