--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prettier": "^1.7.2",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-router5": "^5.1.0",
     "react-scripts": "1.0.14",
+    "router5": "^5.2.2",
     "typeface-roboto": "^0.0.35"
   },
   "lint-staged": {
