--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router5": "^5.1.0",
     "react-scripts": "1.0.14",
     "router5": "^5.2.2",
+    "source-map-explorer": "^1.5.0",
     "typeface-roboto": "^0.0.35"
   },
   "lint-staged": {
@@ -27,6 +28,7 @@
     "deploy": "gh-pages -d build",
     "precommit": "lint-staged",
     "start": "react-scripts start",
+    "analyze": "source-map-explorer build/static/js/main.*",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
