Remove any UX libraries and add Bootstrap
Removing all reactstrap and stuff libraries to
make life a little bit harder but to ensure that I learn
more in the process.

--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "precommit": "lint-staged",
-    "start": "react-scripts-tst start",
+    "start": "react-scripts-ts start",
     "analyze": "source-map-explorer build/static/js/main.*",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
   "dependencies": {
-    "husky": "^0.14.3",
-    "material-ui": "^1.0.0-beta.13",
+    "bootstrap": "4.0.0-beta",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router5": "^5.1.0",
     "react-scripts-ts": "^2.7.0",
+    "react-transition-group": "^2.2.1",
     "router5": "^5.2.2",
     "typeface-roboto": "^0.0.35"
   },
   "devDependencies": {
     "@types/jest": "^21.1.1",
-    "@types/material-ui": "^0.18.2",
     "@types/node": "^8.0.31",
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.5",
     "@types/router5": "^5.0.0",
+    "husky": "^0.14.3",
     "gh-pages": "^1.0.0",
     "lint-staged": "^4.2.3",
     "prettier": "^1.7.3",
