--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router5": "^5.1.0",
     "react-scripts-ts": "^2.7.0",
     "react-transition-group": "^2.2.1",
+    "reactstrap": "^5.0.0-alpha.3",
     "router5": "^5.2.2",
     "typeface-roboto": "^0.0.35"
   },
@@ -35,9 +36,10 @@
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.5",
+    "@types/reactstrap": "^4.6.1",
     "@types/router5": "^5.0.0",
-    "husky": "^0.14.3",
     "gh-pages": "^1.0.0",
+    "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
     "prettier": "^1.7.3",
     "source-map-explorer": "^1.5.0"
