--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "bootstrap": "4.0.0-beta",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router5": "^5.1.0",
+    "react-loadable": "^4.0.5",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "^2.7.0",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.3",
-    "router5": "^5.2.2",
     "typeface-roboto": "^0.0.35"
   },
   "devDependencies": {
@@ -36,8 +36,9 @@
     "@types/prop-types": "^15.5.2",
     "@types/react": "^16.0.7",
     "@types/react-dom": "^15.5.5",
+    "@types/react-loadable": "^4.0.4",
+    "@types/react-router-dom": "^4.0.8",
     "@types/reactstrap": "^4.6.1",
-    "@types/router5": "^5.0.0",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
