--- a/package.json
+++ b/package.json
@@ -3,16 +3,6 @@
   "homepage": "http://kornicameister.github.io/korni",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "husky": "^0.14.3",
-    "material-ui": "^1.0.0-beta.12",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router5": "^5.1.0",
-    "react-scripts": "1.0.14",
-    "router5": "^5.2.2",
-    "typeface-roboto": "^0.0.35"
-  },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
       "prettier --single-quote --write",
@@ -23,14 +13,34 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "precommit": "lint-staged",
-    "start": "react-scripts start",
+    "start": "react-scripts-ts start",
     "analyze": "source-map-explorer build/static/js/main.*",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
+  },
+  "dependencies": {
+    "bootstrap": "4.0.0-beta",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-loadable": "^4.0.5",
+    "react-router-dom": "^4.2.2",
+    "react-scripts-ts": "^2.7.0",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^5.0.0-alpha.3",
+    "typeface-roboto": "^0.0.35"
   },
   "devDependencies": {
+    "@types/jest": "^21.1.1",
+    "@types/node": "^8.0.31",
+    "@types/prop-types": "^15.5.2",
+    "@types/react": "^16.0.7",
+    "@types/react-dom": "^15.5.5",
+    "@types/react-loadable": "^4.0.4",
+    "@types/react-router-dom": "^4.0.8",
+    "@types/reactstrap": "^4.6.1",
     "gh-pages": "^1.0.0",
+    "husky": "^0.14.3",
     "lint-staged": "^4.2.3",
     "prettier": "^1.7.3",
     "source-map-explorer": "^1.5.0"
