--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typeface-roboto": "^0.0.35"
   },
   "devDependencies": {
+    "@types/enzyme": "^2.8.11",
     "@types/jest": "^21.1.1",
     "@types/node": "^8.0.31",
     "@types/prop-types": "^15.5.2",
@@ -39,10 +40,14 @@
     "@types/react-loadable": "^4.0.4",
     "@types/react-router-dom": "^4.0.8",
     "@types/reactstrap": "^4.6.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "gh-pages": "^1.0.0",
     "husky": "^0.14.3",
+    "jest-enzyme": "^4.0.0",
     "lint-staged": "^4.2.3",
     "prettier": "^1.7.3",
+    "react-test-renderer": "^16.0.0",
     "source-map-explorer": "^1.5.0"
   }
 }
