--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "bootstrap": "4.0.0-beta",
+    "classnames": "^2.2.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-loadable": "^4.0.5",
@@ -31,12 +32,10 @@
     "typeface-roboto": "^0.0.35"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.3",
     "@types/enzyme": "^2.8.11",
-    "@types/jest": "^21.1.1",
-    "@types/node": "^8.0.31",
-    "@types/prop-types": "^15.5.2",
-    "@types/react": "^16.0.7",
-    "@types/react-dom": "^15.5.5",
+    "@types/jest": "^21.1.2",
+    "@types/react-dom": "^16.0.1",
     "@types/react-loadable": "^4.0.4",
     "@types/react-router-dom": "^4.0.8",
     "@types/reactstrap": "^4.6.1",
