--- a/dependencies.yml
+++ b/dependencies.yml
@@ -3,9 +3,13 @@ collectors:
 - type: js-npm
   path: /
   actors:
-  # pull requests for updates to our major version
   - type: js-npm
     versions: "L.Y.Y"
-  # create issues for new major versions
+    github_labels:
+      - dependency
+      - update
   - type: repo-issue
     versions: "Y.0.0"
+    github_labels:
+      - dependency
+      - update
