--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-beta",
     "classnames": "^2.2.5",
+    "jsonp": "^0.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-loadable": "^5.3.1",
@@ -36,6 +37,7 @@
     "@types/classnames": "^2.2.3",
     "@types/enzyme": "^2.8.11",
     "@types/jest": "^21.1.4",
+    "@types/jsonp": "^0.2.0",
     "@types/react-dom": "^16.0.1",
     "@types/react-loadable": "^4.0.4",
     "@types/react-router-dom": "^4.0.8",
