--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "sourceMap": true,
     "allowJs": true,
     "jsx": "react",
