--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,11 @@ before_install:
 
 jobs:
   include:
-    - stage: test
+    - stage: verify
       script: yarn test
-    - stage: test
+    - stage: verify
+      script: yarn lint
+    - stage: verify
       script: yarn coverage
     - stage: build
       script: yarn build
