--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "lint-staged": {
     "src/**/*.{js,jsx,json,css,ts,tsx}": [
-      "prettier --single-quote --write",
+      "yarn lint",
       "git add"
     ]
   },
@@ -18,6 +18,7 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom --verbose",
     "coverage": "react-scripts-ts test --env=jsdom --silent --coverage",
+    "lint": "tslint -c tslint.json './src/**/*.{ts,tsx}'",
     "eject": "react-scripts-ts eject"
   },
   "dependencies": {
@@ -48,8 +49,9 @@
     "husky": "^0.14.3",
     "jest-enzyme": "^4.0.0",
     "lint-staged": "^4.3.0",
-    "prettier": "^1.7.4",
     "react-test-renderer": "^16.0.0",
-    "source-map-explorer": "^1.5.0"
+    "source-map-explorer": "^1.5.0",
+    "tslint": "^5.7.0",
+    "tslint-react": "^3.2.0"
   }
 }
