--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "dependencies": {
     "bootstrap": "4.0.0-beta",
     "classnames": "^2.2.5",
-    "d3": "^4.11.0",
     "jsonp": "^0.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-google-charts": "^1.5.5",
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "^2.8.0",
@@ -37,7 +37,6 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
-    "@types/d3": "^4.11.0",
     "@types/enzyme": "^2.8.11",
     "@types/jest": "^21.1.4",
     "@types/jsonp": "^0.2.0",
