--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonp": "^0.2.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-google-charts": "^1.5.5",
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "^2.8.0",
