Add d.ts for react-google-charts
Decided to roll with builtin type definition for react-google-charts.
As it uses the `google-charts` underneath, the new types reuses some
of the definitions from `@types/google.visualization`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,11 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "diagnostics": true
+    "diagnostics": true,
+    "typeRoots": [
+      "src/types/",
+      "node_modules/@types/"
+    ]
   },
   "exclude": [
     "node_modules",
