--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-scripts-ts": "^2.8.0",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.3",
-    "typeface-roboto": "^0.0.43"
+    "typeface-roboto": "^0.0.43",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
