--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.5",
     "font-awesome": "^4.7.0",
     "jsonp": "^0.2.1",
+    "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-google-charts": "^1.5.5",
@@ -43,6 +44,7 @@
     "@types/google.visualization": "^0.0.40",
     "@types/jest": "^21.1.5",
     "@types/jsonp": "^0.2.0",
+    "@types/moment": "^2.13.0",
     "@types/react-dom": "^16.0.1",
     "@types/react-loadable": "^4.0.4",
     "@types/react-router-dom": "^4.2.0",
