--- a/package.json
+++ b/package.json
@@ -59,5 +59,11 @@
     "source-map-explorer": "^1.5.0",
     "tslint": "^5.8.0",
     "tslint-react": "^3.2.0"
+  },
+  "peerDependencies": {
+    "jest": "^21.2.1",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.6",
+    "typescript": "^2.6.1"
   }
 }
