Auto suggest commands for the CV commands
- new deps [react-autosuggest and @types/react-autosuggest]

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonp": "^0.2.1",
     "moment": "^2.19.1",
     "react": "^16.1.0",
+    "react-autosuggest": "^9.3.2",
     "react-dom": "^16.1.0",
     "react-google-charts": "^1.5.5",
     "react-loadable": "^5.3.1",
@@ -45,6 +46,7 @@
     "@types/jest": "^21.1.6",
     "@types/jsonp": "^0.2.0",
     "@types/moment": "^2.13.0",
+    "@types/react-autosuggest": "^9.3.1",
     "@types/react-dom": "^16.0.1",
     "@types/react-loadable": "^4.0.4",
     "@types/react-router-dom": "^4.2.1",
