--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.3",
     "typeface-roboto": "^0.0.43",
-    "xml2js": "^0.4.19",
-    "typescript": "^2.7.0-dev.20171112"
+    "typescript": "^2.7.0-dev.20171112",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
@@ -60,6 +60,7 @@
     "lint-staged": "^5.0.0",
     "react-test-renderer": "^16.1.0",
     "source-map-explorer": "^1.5.0",
+    "ts-jest": "^21.2.2",
     "tslint": "^5.8.0",
     "tslint-react": "^3.2.0"
   },
