--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
+      "yarn prettier",
       "yarn lint",
       "git add"
     ]
@@ -19,6 +20,7 @@
     "test": "react-scripts-ts test --env=jsdom --verbose",
     "coverage": "react-scripts-ts test --env=jsdom --silent --coverage",
     "lint": "tslint -c tslint.json './src/**/*.{ts,tsx}'",
+    "prettier": "prettier --write --config .prettierrc './src/**/*.{ts,tsx}'",
     "eject": "react-scripts-ts eject"
   },
   "dependencies": {
@@ -37,7 +39,7 @@
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
     "typeface-roboto": "^0.0.45",
-    "typescript": "^2.7.0-dev.20171116",
+    "typescript": "^2.6.2",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
@@ -56,7 +58,8 @@
     "gh-pages": "^1.1.0",
     "husky": "^0.14.3",
     "jest-enzyme": "^4.0.1",
-    "lint-staged": "^5.0.0",
+    "lint-staged": "^6.0.0",
+    "prettier": "^1.9.2",
     "react-test-renderer": "^16.2.0",
     "source-map-explorer": "^1.5.0",
     "ts-jest": "^21.2.4",
