Don't expose 3rd party secrets
- use environmental variables to load any 3rd party secrets
- simplify verify stage to run all verify scripts in one stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,7 @@ before_install:
 jobs:
   include:
     - stage: verify
-      script: yarn test
-    - stage: verify
-      script: yarn lint
-    - stage: verify
-      script: yarn coverage
+      script: yarn lint && yarn test && yarn coverage
     - stage: build
       script: yarn build
     - stage: deploy
