--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
     "typeface-roboto": "^0.0.54",
-    "typescript": "^2.6.2",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
@@ -77,6 +76,7 @@
     "source-map-explorer": "^1.5.0",
     "ts-jest": "^22.0.1",
     "tslint": "^5.9.1",
-    "tslint-react": "^3.4.0"
+    "tslint-react": "^3.4.0",
+    "typescript": "^2.6.2"
   }
 }
