Migrating to material-ui

--- a/package.json
+++ b/package.json
@@ -38,12 +38,23 @@
     "eject": "react-scripts-ts eject"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta",
+    "@types/react-swipeable-views": "^0.12.1",
+    "@types/react-loadable": "^5.3.4",
+    "@types/classnames": "^2.2.3",
+    "@types/enzyme": "^3.1.9",
+    "@types/google.visualization": "^0.0.41",
+    "@types/jest": "^22.2.2",
+    "@types/jsonp": "^0.2.0",
+    "@types/react-autosuggest": "^9.3.3",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-router-dom": "^4.2.6",
     "classnames": "^2.2.5",
     "firebase": "4.12.0",
     "font-awesome": "^4.7.0",
     "jsonp": "^0.2.1",
-    "moment": "^2.21.0",
+    "material-ui": "^1.0.0-beta.40",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.22.0",
     "react": "^16.3.1",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.3.1",
@@ -52,31 +63,21 @@
     "react-loadable": "^5.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "^2.14.0",
+    "react-swipeable-views": "^0.12.13",
     "react-transition-group": "^2.3.0",
-    "reactstrap": "^5.0.0",
     "typeface-roboto": "^0.0.54",
     "typescript": "^2.8.1",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.3",
-    "@types/enzyme": "^3.1.9",
-    "@types/google.visualization": "^0.0.41",
-    "@types/jest": "^22.2.2",
-    "@types/jsonp": "^0.2.0",
-    "@types/react-autosuggest": "^9.3.3",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-loadable": "^5.3.0",
-    "@types/react-router-dom": "^4.2.6",
-    "@types/reactstrap": "^5.0.19",
     "codacy-coverage": "^2.1.1",
-    "enzyme": "^3.2.0",
+    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
-    "jest-enzyme": "^4.2.0",
-    "lint-staged": "^6.1.1",
+    "jest-enzyme": "^6.0.0",
+    "lint-staged": "^7.0.3",
     "prettier": "^1.11.1",
-    "react-test-renderer": "^16.3.0",
+    "react-test-renderer": "^16.3.1",
     "source-map-explorer": "^1.5.0",
     "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
