--- a/dependencies.yml
+++ b/dependencies.yml
@@ -1,17 +1,13 @@
-collectors:
-
-- type: js-npm
+version: 2
+dependencies:
+- type: js
   path: /
-  actors:
-  - type: js-npm
-    versions: "L.Y.Y"
-    settings:
-      github_labels:
+  settings:
+    related_pr_behavior: close
+    dist_tags:
+      semantic-release: next
+    github_labels:
       - dependency
       - update
-  - type: repo-issue
-    versions: "Y.0.0"
-    settings:
-      github_labels:
-      - dependency
-      - update
+    github_assignees:
+      - kornicameister
