Change cache and node version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   verify:
     docker:
-      - image: circleci/node:7.10
+      - image: circleci/node:9
 
     working_directory: ~/repo
 
@@ -11,20 +11,20 @@ jobs:
 
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
+          - yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
           - v1-dependencies-
       - run: yarn install
       - save_cache:
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+            - ~/.cache/yarn
+          key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
 
       - run: yarn lint
       - run: yarn test
       - run: yarn coverage
   build:
     docker:
-      - image: circleci/node:7.10
+      - image: circleci/node:9
 
     working_directory: ~/repo
 
@@ -33,13 +33,13 @@ jobs:
 
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
+          - yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
           - v1-dependencies-
       - run: yarn install
       - save_cache:
           paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
+            - ~/.cache/yarn
+          key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
 
       - run: yarn build
 
