Trying to get deploying up 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,17 +125,23 @@ workflows:
             - build
             - verify
           filters:
+            branches:
+              only: master
             tags:
               only: ^(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)$
       - deploy_gr:
           requires:
             - verify_version_match
           filters:
+            branches:
+              only: master
             tags:
               only: ^(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)$
       - deploy_gp:
           requires:
             - verify_version_match
           filters:
+            branches:
+              only: master
             tags:
               only: ^(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)$
