--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.2.12",
   "private": true,
   "engines": {
-    "node": "9.11.1"
+    "node": "9.11.2",
+    "npm": "6.4.1"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
