--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
 
     steps:
       - checkout
+      - run: npm install -g npm@latest
 
       - restore_cache:
           keys:
@@ -30,6 +31,7 @@ jobs:
 
     steps:
       - checkout
+      - run: npm install -g npm@latest
 
       - restore_cache:
           keys:
@@ -99,6 +101,7 @@ jobs:
       # setup everything
       - run:
           command: |
+            npm install -g npm@latest ; \
             npm install gh-pages --no-save ; \
             git config --global user.email "build_${CIRCLE_BUILD_NUM}@circleci.com" ; \
             git config --global user.name "CircleCI"
