--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.2.12",
   "private": true,
   "engines": {
-    "node": "9.11.1"
+    "node": "9.11.2",
+    "npm": "6.4.1"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-      "yarn prettier",
-      "yarn lint",
+      "npm run prettier",
+      "npm run lint",
       "git add"
     ]
   },
@@ -74,11 +75,11 @@
     "husky": "1.1.3",
     "jest-enzyme": "6.0.2",
     "lint-staged": "8.0.4",
-    "prettier": "^1.11.1",
+    "prettier": "^1.14.3",
     "react-test-renderer": "^16.3.0",
     "source-map-explorer": "^1.5.0",
     "ts-jest": "^22.4.2",
-    "tslint": "^5.9.1",
-    "tslint-react": "^3.5.1"
+    "tslint": "^5.11.0",
+    "tslint-react": "^3.6.0"
   }
 }
