--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "elm-app start",
     "build": "elm-app build",
     "test": "elm-app test",
-    "lint": "elm-format --validate src tests && prettier --list-different '**/*.*'"
+    "lint": "elm-format --validate src tests && prettier --list-different '**/*.*'",
+    "prettier": "prettier --write --config .prettierrc 'src/*.js'"
   },
   "dependencies": {
     "create-elm-app": "^2.2.3"
