--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-# testing
-/coverage
-
 # production
-/build
+build/
+
+# elm deps
+elm-stuff/
+
+# node deps
+node_modules/
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
 npm-debug.log*
 
-coverage/
-
-elm-stuff/
